[project]
name = "flow-matching-mnist"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "flow-matching>=1.0.10",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pillow>=11.1.0",
    "pytorch-lightning>=2.5.0.post0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
example = [
    "jupyterlab>=4.3.5",
    "pandas>=2.2.3",
]
